# Tryon

./: Dockerfile  README.md  main.py  pyproject.toml  server.py
api/: routes.py
app/api/: routes.py
app/core/: config.py
app/services/: appwrite_service.py  gemini_service.py
app/utils/: validators.py
schemas/: response.py
services/: appwrite_service.py  gemini_service.py  image_service.py
utils/: validators.py
