[project]
name = "tryon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiofiles>=25.1.0",
    "appwrite>=21.0.0",
    "fastapi>=0.139.0",
    "google-generativeai>=0.8.6",
    "pillow>=12.3.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.50.0",
]
